--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             </li>
             <li ui-sref-active = "active">
               <a ui-sref="public.signup">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Sign up</a>
+                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Sign up</a>
             </li>
             <li ui-sref-active = "active">
               <a ui-sref="public.myinfo">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> My Info</a>
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> My Info</a>
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-602-5008">
